# cashflow_framework

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/cashflow/: run.py
src/cashflow/cache/: cache.py
src/cashflow/models/: base.py  example.py
src/cashflow/nodes/: base.py  data_access.py  indexed_series.py  record.py
src/cashflow/viz/: __init__.py  dag_mermaid.py
tests/: test_dag_mermaid.py
